plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.graalvm.buildtools.native' version '0.10.6'
	id 'com.diffplug.spotless' version '7.0.3'
	id "net.ltgt.errorprone" version '4.1.0'
	id 'com.adarshr.test-logger' version '4.0.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_23
	targetCompatibility = JavaVersion.VERSION_23
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}


repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

ext {
	set('springModulithVersion', "1.4.0-M3")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.modulith:spring-modulith-starter-core'
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.3.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava'
	implementation 'com.google.guava:guava:33.4.8-jre'
	implementation 'org.jmolecules:jmolecules-ddd:1.10.0'
	implementation 'org.jmolecules:jmolecules-onion-architecture:1.10.0'


	// JWT Library - Auth0 java-jwt
	implementation 'com.auth0:java-jwt:4.4.0'

	// 静的解析ツール
	implementation 'org.jspecify:jspecify:1.0.0'
	errorprone "com.uber.nullaway:nullaway:0.12.6"
	errorprone "com.google.errorprone:error_prone_core:2.37.0"   


	compileOnly 'org.projectlombok:lombok:1.18.38'
	annotationProcessor 'org.projectlombok:lombok:1.18.38'
	testCompileOnly 'org.projectlombok:lombok:1.18.38'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter:1.20.6'
	testImplementation 'org.testcontainers:mongodb:1.20.6'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.jmolecules.integrations:jmolecules-archunit:0.26.0'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.0'
}

configurations.all {
	exclude group: 'org.slf4j', module: 'slf4j-simple' // SLF4J Simpleを除外
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
	}
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test 
    reports {
        xml.required = true
		html.required = true
    }
}

testlogger {
    showFullStackTraces true
}

apply from: "spotless.gradle"

// NullAway設定
import net.ltgt.gradle.errorprone.CheckSeverity

tasks.withType(JavaCompile) {
  options.errorprone {
    check("NullAway", CheckSeverity.ERROR)
    option("NullAway:AnnotatedPackages", "com.example.ec_2024b_back")
	excludedPaths = ".*build/generated/.*"
	disableWarningsInGeneratedCode = true
	// errorproneArgs.add("-XepPatchLocation:IN_PLACE")
	errorproneArgs.add("-Xep:Java8ApiChecker:OFF")
	errorproneArgs.add("-Xep:Java7ApiChecker:OFF")
	errorproneArgs.add("-Xep:AndroidJdkLibsChecker:OFF")
	errorproneArgs.add("-Xep:IdentifierName:OFF")
	// ImmutableMemberCollection checkを無効化
	errorproneArgs.add("-Xep:ImmutableMemberCollection:OFF")
  }
  // Include to disable NullAway on test code
  if (name.toLowerCase().contains("test")) {
    options.errorprone {
      disable("NullAway")
    }
  }
}
